created header, about and products section on html

--- a/index.html
+++ b/index.html
@@ -4,18 +4,133 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/60d37f1f0e.js" crossorigin="anonymous"></script>
+    <title>OREG</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="./index.html">Home</a>
-            </li>
-            <li>
-                <a href="./contact.html">Contact</a>
-            </li>
-        </ul>
-    </nav>
+    <!-- HEADER section -->
+    <header>
+        <div class="wrapper">
+            <nav>
+                <img src="./assets/assets/logo.png" alt="OREG logo">
+                <ul>
+                    <li>
+                        <a href="./index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a href="./contact.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </a>
+                    </li>
+                </ul>
+            </nav>  
+            <div class="headerContainer">
+                <h1>Providing Tasty & Healthy Food</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa repellendus dolorem, minima, praesentium eaque optio numquam voluptates animi assumenda ea culpa sint nemo, iusto reiciendis.</p>
+                <button><a href="#products">Shop now</a></button>
+            </div>           
+            <img src="./assets/assets/header/header.png" alt="a plate of papaya and straberries">
+        </div>
+    </header>
+    <main>
+        <!-- ABOUT section -->
+        <section id="about" class="about">
+            <div class="wrapper">
+                <div class="aboutTextContainer">
+                    <h3>About Us</h3>
+                    <h1>Providing Best Organic Products</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit laboriosam fugit amet. Rerum exercitationem ad cum ipsa eius saepe nostrum tempora architecto, vero, aspernatur reprehenderit odit cupiditate non maiores!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam consequuntur dignissimos ab, possimus magni dolorem ratione, adipisci est maxime dolor fugiat eaque mollitia tempore numquam.</p>
+                    <button><a href="#products">Shop now</a></button>
+                </div>
+                <div class="aboutMottoContainer">
+                    <p>We've been providing best services for 20 years</p>
+                </div>
+            </div>
+        </section>
+        <!-- PRODUCTS section -->
+        <section id="products" class="products">
+            <div class="wrapper">
+                <h2>Our Products</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro doloribus voluptate assumenda tenetur adipisci?</p>
+                <div class="productsContainer">
+                    <div class="product">
+                        <img src="./assets/assets/product1.jpeg" alt="mix of tomato, cucumber and lettuce">
+                        <h3>Mix Vegetables</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="price">$350     
+                            <span class="priceBefore">$370</span>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <img src="./assets/assets/product2.jpeg" alt="two limes">
+                        <h3>Mix Vegetables</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="price">$350     
+                            <span class="priceBefore">$370</span>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <img src="./assets/assets/product3.jpeg" alt="three green eggplants">
+                        <h3>Mix Vegetables</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="price">$350     
+                            <span class="priceBefore">$370</span>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <img src="./assets/assets/product4.jpeg" alt="three zucchinis">
+                        <h3>Mix Vegetables</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="price">$350     
+                            <span class="priceBefore">$370</span>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <img src="./assets/assets/product5.jpeg" alt="three green beans">
+                        <h3>Mix Vegetables</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="price">$350     
+                            <span class="priceBefore">$370</span>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <img src="./assets/assets/product6.jpeg" alt="four olives on tree branch">
+                        <h3>Mix Vegetables</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="price">$350     
+                            <span class="priceBefore">$370</span>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <img src="./assets/assets/product7.jpeg" alt="one cabbage">
+                        <h3>Mix Vegetables</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="price">$350     
+                            <span class="priceBefore">$370</span>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <img src="./assets/assets/product8.jpeg" alt="one lettuce">
+                        <h3>Mix Vegetables</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="price">$350     
+                            <span class="priceBefore">$370</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- FOOTER section -->
+    <footer>
+
+    </footer>
 </body>
 </html>
