Created homepage: gallery, news & footer sections

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="headerContainer">
                 <h1>Providing Tasty & Healthy Food</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa repellendus dolorem, minima, praesentium eaque optio numquam voluptates animi assumenda ea culpa sint nemo, iusto reiciendis.</p>
-                <button><a href="#products">Shop now</a></button>
+                <button><a href=#products">Shop now</a></button>
             </div>           
             <img src="./assets/assets/header/header.png" alt="a plate of papaya and straberries">
         </div>
@@ -67,6 +67,9 @@
                         <div class="price">$350     
                             <span class="priceBefore">$370</span>
                         </div>
+                        <button>
+                            <a href="#">Add To Cart</a>
+                        </button>
                     </div>
                     <div class="product">
                         <img src="./assets/assets/product2.jpeg" alt="two limes">
@@ -75,6 +78,9 @@
                         <div class="price">$350     
                             <span class="priceBefore">$370</span>
                         </div>
+                        <button>
+                            <a href="#">Add To Cart</a>
+                        </button>
                     </div>
                     <div class="product">
                         <img src="./assets/assets/product3.jpeg" alt="three green eggplants">
@@ -83,6 +89,9 @@
                         <div class="price">$350     
                             <span class="priceBefore">$370</span>
                         </div>
+                        <button>
+                            <a href="#">Add To Cart</a>
+                        </button>
                     </div>
                     <div class="product">
                         <img src="./assets/assets/product4.jpeg" alt="three zucchinis">
@@ -91,6 +100,9 @@
                         <div class="price">$350     
                             <span class="priceBefore">$370</span>
                         </div>
+                        <button>
+                            <a href="#">Add To Cart</a>
+                        </button>
                     </div>
                     <div class="product">
                         <img src="./assets/assets/product5.jpeg" alt="three green beans">
@@ -99,6 +111,9 @@
                         <div class="price">$350     
                             <span class="priceBefore">$370</span>
                         </div>
+                        <button>
+                            <a href="#">Add To Cart</a>
+                        </button>
                     </div>
                     <div class="product">
                         <img src="./assets/assets/product6.jpeg" alt="four olives on tree branch">
@@ -107,6 +122,9 @@
                         <div class="price">$350     
                             <span class="priceBefore">$370</span>
                         </div>
+                        <button>
+                            <a href="#">Add To Cart</a>
+                        </button>
                     </div>
                     <div class="product">
                         <img src="./assets/assets/product7.jpeg" alt="one cabbage">
@@ -115,6 +133,9 @@
                         <div class="price">$350     
                             <span class="priceBefore">$370</span>
                         </div>
+                        <button>
+                            <a href="#">Add To Cart</a>
+                        </button>
                     </div>
                     <div class="product">
                         <img src="./assets/assets/product8.jpeg" alt="one lettuce">
@@ -123,6 +144,91 @@
                         <div class="price">$350     
                             <span class="priceBefore">$370</span>
                         </div>
+                        <button>
+                            <a href="#">Add To Cart</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- GALLERY section -->
+        <section id="gallery" class="gallery">
+            <div class="wrapper">
+                <div class="galleryTextContainer">
+                    <h2>Our Gallery</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem molestias fuga earum. Tempore, aut provident.</p>
+                    <ul>
+                        <li>
+                            <button>
+                                <a href="#">All</a>
+                            </button>
+                        </li>
+                        <li>
+                            <button>
+                                <a href="#">Business</a>
+                            </button>
+                        </li>
+                        <li>
+                            <button>
+                                <a href="#">Development</a>
+                            </button>
+                        </li>
+                        <li>
+                            <button>
+                                <a href="#">Technology</a>
+                            </button>
+                        </li>
+                        <li>
+                            <button>
+                                <a href="#">Agency</a>
+                            </button>
+                        </li>
+                    </ul>
+                </div>
+                <div class="imageGalleryContainer">
+                    <ul>
+                        <li><img src="./assets/assets/gallery1.jpg" alt="a hand holding an apple"></li>
+                        <li><img src="./assets/assets/gallery2.jpg" alt="a triangular shaped sandwich"></li>
+                        <li><img src="./assets/assets/gallery3.jpg" alt="a variety of fruits and vegetables laying on a wooden table"></li>
+                        <li><img src="./assets/assets/gallery4.jpg" alt="a person holding a basket of vegetables"></li>
+                        <li><img src="./assets/assets/gallery5.jpg" alt="four eggs placed nicely with some leaves"></li>
+                        <li><img src="./assets/assets/gallery6.jpg" alt="basket of some carrots and onions"></li>
+                        <li><img src="./assets/assets/gallery7.jpg" alt="baskets of some vegetables at a market"></li>
+                        <li><img src="./assets/assets/gallery8.jpg" alt="a person holding three carrots freshly picked from the ground"></li>
+                    </ul>
+                </div>
+                <button><a href="#">Load more</a></button>
+            </div>
+        </section>
+        <!-- NEWS section -->
+        <section id="news" class="news">
+            <div class="wrapper">
+                <h2>Latest News</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit qui recusandae tempora eaque pariatur. Nulla</p>
+                <div class="newsContainer">
+                    <div class="blog">
+                        <img src="./assets/assets/blog1.jpg" alt="basket of various vegetables">
+                        <h3>Departure Ourselves Very As He Peculiar Believed</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis aliquid in deserunt nihil!</p>
+                        <button>
+                            <a href="#">Read more</a>
+                        </button>
+                    </div>
+                    <div class="blog">
+                        <img src="./assets/assets/blog2.jpg" alt="basket of various fruits">
+                        <h3>Departure Ourselves Very As He Peculiar Believed</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis aliquid in deserunt nihil!</p>
+                        <button>
+                            <a href="#">Read more</a>
+                        </button>
+                    </div>
+                    <div class="blog">
+                        <img src="./assets/assets/blog3.jpg" alt="various spices and herbs displayed on a wooden table">
+                        <h3>Departure Ourselves Very As He Peculiar Believed</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis aliquid in deserunt nihil!</p>
+                        <button>
+                            <a href="#">Read more</a>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -130,7 +236,54 @@
     </main>
     <!-- FOOTER section -->
     <footer>
-
+        <div class="footerRow">
+            <div class="footerColumn">
+                <img src="./assets/assets/logo.png" alt="OREG logo">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus sed unde neque perferendis sint magnam quas.</p>
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-youtube"></a>
+                <a href="#" class="fa fa-twitter"></a>
+            </div>
+            <div class="footerColumn">
+                <h3>Quick Links</h3>
+                <p><a href="#">About Us</a></p>
+                <p><a href="#">Our Product</a></p>
+                <p><a href="#">Our Blog</a></p>
+                <p><a href="#">Contact Us</a></p>
+                <p><a href="#">Become a member</a></p>
+                <p><a href="#">Cases Studies</a></p>
+            </div>
+            <div class="footerColumn">
+                <h3>Recent Products</h3>
+                <div class="footerProduct">
+                    <img src="./assets/assets/product7.jpeg" alt="one lettuce">
+                    <h4>Fresh Vegetable</h4>
+                    <span class="priceBefore">$13</span>
+                </div>
+                <div class="footerProduct">
+                    <img src="./assets/assets/product6.jpeg" alt="green olive on a tree branch">
+                    <h4>Fresh Fruit</h4>
+                    <span class="priceBefore">$13</span>
+                </div>
+                <div class="footerProduct">
+                    <img src="./assets/assets/product5.jpeg" alt="some green peas with pods">
+                    <h4>Fresh Bean</h4>
+                    <span class="priceBefore">$13</span>
+                </div>
+            </div>
+            <div class="footerColumn">
+                <h3>Subscribe</h3>
+                <p><span>Address:</span></p>
+                <p>5919 Trussville Crossings Pkwy, <br>Birmingham AL 35235</p>
+                <p><span>Phone:</span></p>
+                <p>+8801688005654</p>
+                <form action="text">
+                    <input type="text">
+                </form>
+            </div>
+        </div>
+        <p>Copyright &copy; 2023. All Rights Reserved</p>
     </footer>
 </body>
 </html>
