Created Contact page: header, broad form and footer

--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,114 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/60d37f1f0e.js" crossorigin="anonymous"></script>
+    <title>Contact</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-            <p>Contact us!</p>
-        </ul>
-    </nav>
+    <header>
+        <div class="wrapper">
+            <nav>
+                <img src="./assets/assets/logo.png" alt="OREG logo">
+                <ul>
+                    <li>
+                        <a href="./index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="./index.html#news">Blog</a>
+                    </li>
+                    <li>
+                        <a href="./contact.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </a>
+                    </li>
+                </ul>
+            </nav>  
+            <div class="contactHeaderContainer">
+                <h1>Contact Us</h1> 
+            </div>
+        </div>   
+    </header>
+    <main>
+        <!-- FORM section -->
+        <section id="form" class="form">
+            <div class="wrapper">
+                <div class="formRow">
+                    <div class="formColumn">
+                        <div class="info">
+                            <h3>Office Address</h3>
+                            <p>3812 Lena Lane City Jacson Mississippi</p>
+                        </div>
+                        <div class="info">
+                            <h3>Phone Number</h3>
+                            <p>601-594-3504</p>
+                        </div>
+                        <div class="info">
+                            <h3>Email</h3>
+                            <p>no-email@oreg.com</p>
+                        </div>
+                    </div>
+                    <div class="formColumn">
+                        <form action="">
+                            <input type="text">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- FOOTER section -->
+    <footer>
+        <div class="footerRow">
+            <div class="footerColumn">
+                <img src="./assets/assets/logo.png" alt="OREG logo">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus sed unde neque perferendis sint magnam quas.</p>
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-youtube"></a>
+                <a href="#" class="fa fa-twitter"></a>
+            </div>
+            <div class="footerColumn">
+                <h3>Quick Links</h3>
+                <p><a href="#">About Us</a></p>
+                <p><a href="#">Our Product</a></p>
+                <p><a href="#">Our Blog</a></p>
+                <p><a href="#">Contact Us</a></p>
+                <p><a href="#">Become a member</a></p>
+                <p><a href="#">Cases Studies</a></p>
+            </div>
+            <div class="footerColumn">
+                <h3>Recent Products</h3>
+                <div class="footerProduct">
+                    <img src="./assets/assets/product7.jpeg" alt="one lettuce">
+                    <h4>Fresh Vegetable</h4>
+                    <span class="priceBefore">$13</span>
+                </div>
+                <div class="footerProduct">
+                    <img src="./assets/assets/product6.jpeg" alt="green olive on a tree branch">
+                    <h4>Fresh Fruit</h4>
+                    <span class="priceBefore">$13</span>
+                </div>
+                <div class="footerProduct">
+                    <img src="./assets/assets/product5.jpeg" alt="some green peas with pods">
+                    <h4>Fresh Bean</h4>
+                    <span class="priceBefore">$13</span>
+                </div>
+            </div>
+            <div class="footerColumn">
+                <h3>Subscribe</h3>
+                <p><span>Address:</span></p>
+                <p>5919 Trussville Crossings Pkwy, <br>Birmingham AL 35235</p>
+                <p><span>Phone:</span></p>
+                <p>+8801688005654</p>
+                <form action="text">
+                    <input type="text">
+                </form>
+            </div>
+        </div>
+        <p>Copyright &copy; 2023. All Rights Reserved</p>
+    </footer>   
 </body>
 </html>
