Completed form in contact & index.html

--- a/index.html
+++ b/index.html
@@ -278,8 +278,9 @@
                 <p>5919 Trussville Crossings Pkwy, <br>Birmingham AL 35235</p>
                 <p><span>Phone:</span></p>
                 <p>+8801688005654</p>
-                <form action="text">
-                    <input type="text">
+                <form action="">
+                    <label for="email" class="sr-only">Email</label>
+                    <input type="email" placeholder="Enter Email..." id="email">
                 </form>
             </div>
         </div>
