--- a/index.html
+++ b/index.html
@@ -5,39 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/60d37f1f0e.js" crossorigin="anonymous"></script>
     <title>OREG</title>
 </head>
 <body>
     <!-- HEADER section -->
     <header>
-        <div class="wrapper">
-            <nav>
-                <img src="./assets/assets/logo.png" alt="OREG logo">
-                <ul>
-                    <li>
-                        <a href="./index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">Blog</a>
-                    </li>
-                    <li>
-                        <a href="./contact.html">Contact</a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa-solid fa-cart-shopping"></i>
-                        </a>
-                    </li>
-                </ul>
-            </nav>  
-            <div class="headerContainer">
-                <h1>Providing Tasty & Healthy Food</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa repellendus dolorem, minima, praesentium eaque optio numquam voluptates animi assumenda ea culpa sint nemo, iusto reiciendis.</p>
-                <button><a href=#products">Shop now</a></button>
-            </div>           
-            <img src="./assets/assets/header/header.png" alt="a plate of papaya and straberries">
-        </div>
+        <section class="header-top" id="header-top">
+            <div class="wrapper">
+                <div class="header-logo" id="header-logo">
+                    <img src="./assets/assets/logo.png" alt="OREG logo">
+                </div>                    
+
+
+                <div class="header-nav" id="header-nav">
+                    <nav>
+                        <ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./index.html#news">Blog</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                        </ul>
+                    </nav>
+                </div>                
+            </div>
+        </section>
+        
+        <section class="header-main" id="header-main">
+            <div class="wrapper">
+                <div class="header-text-container" id="header-text-container">
+                    <h1>Providing Tasty & Healthy Food</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa repellendus dolorem, minima, praesentium eaque optio numquam voluptates nemo, iusto reiciendis.</p>
+                    <button class="header-text-button" id="header-text-button"><a href=#products">Shop now</a></button>
+                </div>   
+
+                <div class="header-image-container" id="header-image-container"> 
+                    <img src="./assets/assets/header/header.png" alt="a plate of papaya and straberries">
+                </div>                  
+            </div>
+        </section>   
+    </header>
+
     </header>
     <main>
         <!-- ABOUT section -->
