Added styling to home page: about section.

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
         <!-- ABOUT section -->
         <section id="about" class="about">
             <div class="wrapper">
-                <div class="aboutTextContainer">
+                <div class="about-text-container">
                     <h3>About Us</h3>
                     <h1>Providing Best Organic Products</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit laboriosam fugit amet. Rerum exercitationem ad cum ipsa eius saepe nostrum tempora architecto, vero, aspernatur reprehenderit odit cupiditate non maiores!</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam consequuntur dignissimos ab, possimus magni dolorem ratione, adipisci est maxime dolor fugiat eaque mollitia tempore numquam.</p>
-                    <button><a href="#products">Shop now</a></button>
+                    <button class="about-text-button"><a href="#products">Shop now</a></button>
                 </div>
-                <div class="aboutMottoContainer">
+                <div class="about-motto-container">
                     <p>We've been providing best services for 20 years</p>
                 </div>
             </div>
