Finished home page: about section.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                     <button class="about-text-button"><a href="#products">Shop now</a></button>
                 </div>
                 <div class="about-motto-container">
-                    <p>We've been providing best services for 20 years</p>
+                    <div class="shape">
+                        <p>We've been providing best services for 20 years</p>   
+                    </div>
                 </div>
             </div>
         </section>
