Started styling home page: gallery section.

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <!-- GALLERY section -->
         <section id="gallery" class="gallery">
             <div class="wrapper">
-                <div class="galleryTextContainer">
+                <div class="gallery-text-container">
                     <h2>Our Gallery</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem molestias fuga earum. Tempore, aut provident.</p>
                     <ul>
