Finished gallery title section.

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <div class="gallery-text-container">
                     <h2>Our Gallery</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem molestias fuga earum. Tempore, aut provident.</p>
-                    <ul>
+                    <ul class="gallery-buttons">
                         <li>
                             <button>
                                 <a href="#">All</a>
