Finished styling home page: gallery section.

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         </button>
                     </div>
                 </div>   
-                <div class="products-button">
+                <div class="load-button">
                     <button class="button">
                         <a class="uppercase-button" href="#">Load more</a>
                     </button>                     
@@ -225,7 +225,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem molestias fuga earum. Tempore, aut provident.</p>
                     <ul class="gallery-buttons">
                         <li>
-                            <button>
+                            <button >
                                 <a href="#">All</a>
                             </button>
                         </li>
@@ -251,19 +251,23 @@
                         </li>
                     </ul>
                 </div>
-                <div class="imageGalleryContainer">
-                    <ul>
+                <div>
+                    <ul class="image-gallery-container">
                         <li><img src="./assets/assets/gallery1.jpg" alt="a hand holding an apple"></li>
                         <li><img src="./assets/assets/gallery2.jpg" alt="a triangular shaped sandwich"></li>
                         <li><img src="./assets/assets/gallery3.jpg" alt="a variety of fruits and vegetables laying on a wooden table"></li>
-                        <li><img src="./assets/assets/gallery4.jpg" alt="a person holding a basket of vegetables"></li>
-                        <li><img src="./assets/assets/gallery5.jpg" alt="four eggs placed nicely with some leaves"></li>
+                        <li class="larger-image"><img src="./assets/assets/gallery4.jpg" alt="a person holding a basket of vegetables"></li>
+                        <li class="larger-image"><img src="./assets/assets/gallery5.jpg" alt="four eggs placed nicely with some leaves"></li>
                         <li><img src="./assets/assets/gallery6.jpg" alt="basket of some carrots and onions"></li>
                         <li><img src="./assets/assets/gallery7.jpg" alt="baskets of some vegetables at a market"></li>
                         <li><img src="./assets/assets/gallery8.jpg" alt="a person holding three carrots freshly picked from the ground"></li>
                     </ul>
                 </div>
-                <button><a href="#">Load more</a></button>
+                <div class="load-button">
+                    <button class="button">
+                        <a class="uppercase-button" href="#">Load more</a>
+                    </button>                    
+                </div>
             </div>
         </section>
         <!-- NEWS section -->
