Finished styling home page: news section.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <!-- PRODUCTS section -->
         <section id="products" class="products">
             <div class="wrapper">
-                <div class="products-head-container">
+                <div class="section-head-container">
                     <h2>Our Products</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro doloribus voluptate assumenda tenetur adipisci?</p>                    
                 </div>
@@ -273,12 +273,15 @@
         <!-- NEWS section -->
         <section id="news" class="news">
             <div class="wrapper">
-                <h2>Latest News</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit qui recusandae tempora eaque pariatur. Nulla</p>
-                <div class="newsContainer">
+                <div class="section-head-container">
+                    <h2>Latest News</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt voluptas, odio fuga dolorem enim expedita omnis impedit dolores nihil sit magnam.</p>                    
+                </div>
+
+                <div class="news-container">
                     <div class="blog">
                         <img src="./assets/assets/blog1.jpg" alt="basket of various vegetables">
-                        <h4>Departure Ourselves Very As He Peculiar Believed</h3>
+                        <h3>Departure Ourselves Very As He Peculiar Believed</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis aliquid in deserunt nihil!</p>
                         <button>
                             <a href="#">Read more</a>
