--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,8 @@
         <section class="header-top" id="header-top">
             <div class="wrapper">
                 <div class="header-logo" id="header-logo">
-                    <img src="./assets/assets/logo.png" alt="OREG logo">                    
+                    <img src="./assets/assets/logo.png" alt="OREG logo">
+                </div>                    
 
 
                 <div class="header-nav" id="header-nav">
@@ -36,9 +37,9 @@
             </div>
         </section>
         
-        <section class="header-main" id="header-main">
-            <div class="wrapper">
-                <div class="contact-header-container" id="contact-header-container">
+        <section class="contact-header" id="contact-header">
+            <div class="overlay">
+                <div class="wrapper">
                     <h1>Contact Us</h1> 
                 </div>                
             </div>
